# lamr

./: .gitignore  404.html  OOP.html  P2.json  README.md  api-examples.html  bootcamp.json  bootcamp.py  comprehensions.html  conditional_execution.html  content.py  development.md  development_notes.txt  dictionaries.html  dictionaries.md  environments.html  exceptions.html  functions.html  generate.py  hashmap.json  import.html  index.html  io.html  justfile  loops.html  markdown-examples.html  markdown.py  nice_gui.py  null.txt  package-lock.json  package.json  page.html  programming.json  pyproject.toml  readme.py  remark.md  retreat.json  retreat.py  sequences.html  slide.md  (+8 more)
assets/: OOP.md.ddb3aed6.js  api-examples.md.g-eOeAqS.js  api-examples.md.g-eOeAqS.lean.js  api-examples.md.vgu4tETy.js  api-examples.md.vgu4tETy.lean.js  app.ZnWIpNEY.js  app.hx-RfJX6.js  app.mraiqPU5.js  code_cal.py.md.MnEvUbzv.js  code_cal.py.md.MnEvUbzv.lean.js  code_cal.py.md.WSfPhVJk.js  code_cal.py.md.WSfPhVJk.lean.js  code_logo.py.md.ktkawgbb.js  code_logo.py.md.ktkawgbb.lean.js  code_logo.py.md.mN9hKcCL.js  code_logo.py.md.mN9hKcCL.lean.js  code_x.py.md.cdwbsury.lean.js  code_x.py.md.vJ209vMx.js  index.md.IpMizoe2.lean.js  index.md.JIie3wuh.lean.js  index.md.Ky5aDpeO.js  index.md.tp-sqRPG.lean.js  markdown-examples.md.8V_aBWgc.js  markdown-examples.md.8V_aBWgc.lean.js  markdown-examples.md.qMqYDwnH.js  markdown-examples.md.qMqYDwnH.lean.js  page.md.39511a27.js  readme_code.md.6AZk9tG6.js  readme_code.md.6AZk9tG6.lean.js  readme_code.md.PCRw9a_D.js  readme_code.md.PCRw9a_D.lean.js  (+50 more)
(+161 files in other folders)
