[tool.poetry]
name = "lamr"
version = "0.2.2"
description = "Python course for beginners fully free at your own command line."
authors = ["Evgeny Pogrebnyak <e.pogrebnyak@gmail.com>"]
license = "GNU"
readme = "README.md"
repository = "https://github.com/epogrebnyak/bootcamp"


[tool.poetry.scripts]
lamr = "lamr.show:lamr_app"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.9.0"
rich = "^13.7.0"
pygments = "^2.17.2"
pyyaml = "^6.0.1"
#python-frontmatter = "^1.1.0"
types-pygments = "^2.17.0.20240106"
types-pyyaml = "^6.0.12.12"
python-frontmatter = "^1.1.0"
pydantic = "^2.6.0"
ghp-import = "^2.1.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
isort = "^5.13.2"
ruff = "^0.1.15"
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
